fix(side menu): corrected logic for z-index

--- a/core/src/components/side-menu/side-menu.scss
+++ b/core/src/components/side-menu/side-menu.scss
@@ -64,6 +64,13 @@
   }
 }
 
+@media (max-width: $grid-lg) {
+  :host([open]) {
+    pointer-events: auto;
+    z-index: tds-z-index(header) + 1;
+  }
+}
+
 @media (min-width: $grid-lg) {
   :host([persistent]) {
     pointer-events: auto;
